# updvd

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  updvd architecture.drawio
.github/workflows/: ci.yml
results/: gemma3-4b.json  llama3.2-3b.json  phi4-mini.json  qwen3-4b.json  qwen3-8b.json
results/mmlu/: mmlu.json
results/seeds/: gemma3-4b.json  llama3.2-3b.json  phi4-mini.json  qwen3-4b.json  qwen3-8b.json
scripts/: run_all.ps1  run_all.sh  run_mmlu.ps1  run_mmlu.py  run_mmlu.sh  run_multiseed.ps1  run_multiseed.sh
src/updvd/: __init__.py  analysis.py  cli.py  contracts.py  engine.py  evaluation.py  interceptor.py  mmlu.py  multimodel.py  ollama_proposer.py  proposer.py  scenarios.py  schemas.py  state.py  tasks.py  trace.py  verdicts.py
tests/: test_updvd.py
