[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "updvd"
version = "1.0.0"
description = "Untrusted Proposer, Verified Disposer: a Design-by-Contract execution plane for agentic AI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pydantic==2.13.4",
]

[project.optional-dependencies]
llm = ["ollama==0.6.0"]
dev = ["pytest==8.4.2"]

[project.scripts]
updvd = "updvd.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]